tests/NormalTests/paczka1/fuzzy1/67811085.err
Error in line 7: MHwIfbb A851 23,3
Error in line 9: MHwIfbb A634 7,5
Error in line 6: VRMzFsWZl A634 92,0
Error in line 22: S746 A43 9,9
Error in line 35: h3fe2ZMY A851 469,9
